--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.5.0",
+    "bootstrap-icons-react": "^1.0.0",
     "gatsby": "^3.4.1",
     "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-whatshelp": "^1.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
