--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
     "bootstrap-icons": "^1.5.0",
     "bootstrap-icons-react": "^1.0.0",
     "gatsby": "^3.4.1",
+    "gatsby-image": "^3.7.1",
+    "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-react-helmet": "^4.6.0",
+    "gatsby-plugin-sharp": "^3.7.1",
     "gatsby-plugin-whatshelp": "^1.0.0",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
